--- a/templates/website/process.html
+++ b/templates/website/process.html
@@ -42,67 +42,5 @@
 
 {% block js %}
 <script src="{% static 'leaflet/dist/leaflet.js' %}"></script>
-<script>
-$(document).ready(function() {
-  // Initialise map
-  map = L.map('leaflet').setView([-29, 24.5], 5);
-  L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: 'Map data &copy; 2013 OpenStreetMap contributors',
-  }).addTo(map);
-
-  $('.btn-process').click(function(event) {
-    // Each time we click the button remove the previous layer (if there was one)
-    if(typeof geojsonLayer != 'undefined') {
-      map.removeLayer(geojsonLayer);
-    }
-
-    // Get the main set of georeferenced points and add to geojson layer
-    georeferences = $.parseJSON($(this).attr('data-locations'));
-
-    // Make it a list because we may add original point to it (see below)
-    georeferences = [georeferences];
-
-    // If there's an original point passed in from the HoT we need to add it too
-    if($(this).attr('data-original-point')) {
-      original_point = $.parseJSON($(this).attr('data-original-point'));
-      georeferences.push(original_point);
-    }
-
-    // Create a geojson layer, see https://www.dartdocs.org/documentation/leaflet/0.0.1-alpha.4/leaflet.layer/GeoJSON/addData.html
-    geojsonLayer = L.geoJson(georeferences, {
-      pointToLayer: function(feature, latlng) {
-          return new L.CircleMarker(latlng, {radius: 10, fillOpacity: 0.85});
-      },
-      onEachFeature: function (feature, layer) {
-        layer.bindPopup('hello');
-      }
-    });
-
-    // Add the layer to the map and zoom to it
-    map.addLayer(geojsonLayer);
-    map.fitBounds(geojsonLayer, {padding: [80, 80]});
-  });
-
-
-  /*L.timeLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
-      attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-      maxZoom: 18,
-      id: 'your.mapbox.project.id',
-      accessToken: 'pk.eyJ1IjoicnVrYXlhIiwiYSI6ImNpb280aHV1OTAwMTJ2d2ttMWE5b3ExdjUifQ.rgOgpoTwMzfOQDU3gdY4lA'
-  }).addTo(mymap);*/
-
-
-
-
-        /*
-  L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
-      attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-      maxZoom: 18,
-      id: 'your.mapbox.project.id',
-      accessToken: 'your.mapbox.public.access.token'
-  }).addTo(mymap);*/
-
-
-});
-</script>
+<script src="{% static 'georeference.js' %}"></script>
 {% endblock js %}
