--- a/templates/website/process.html
+++ b/templates/website/process.html
@@ -4,43 +4,22 @@
 {% block css %}
 <!--<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />-->
 <link rel="stylesheet" href="{% static 'leaflet/dist/leaflet.css' %}">
+<link rel="stylesheet" href="{% static 'leaflet-draw/dist/leaflet.draw.css' %}">
 {% endblock css %}
 
 {% block content %}
-<h1>Georeferencing @ SANBI</h1>
-<div id="leaflet" style="height: 400px"></div>
+<h1 id="locality_name"><small id="date"></small></h1>
+<div id="group"></div><div id="unique_id"></div>
+<button class="btn btn-primary btn-process" data-locations='{{ row.locality_name.potential_geo_locations }}'>Process</button>
 <hr>
-
-<!-- Table of data being georeferenced -->
-<table class="table table-striped">
-  <thead><tr>
-    <th>#</th>
-    <th>Collected</th>
-    <th>Collector</th>
-    <th>Place</th>
-    <th>&nbsp;</th>
-  </tr></thead>
-  <tbody>
-  {% for row in data %}
-    <tr>
-      <td>{{ row.brahms }}</td>
-      <td>{{ row.collected }}</td>
-      <td>{{ row.collector_number }}</td>
-      <td>{{ row.locality }}</td>
-      <td>
-        <button class="btn btn-primary btn-process" data-locations='{{ row.georeference.locality_parts.georeferenced }}'
-                {% if row.original_point %}
-                data-original-point="{{ row.original_point }}"
-                {% endif %}>Process</button>
-      </td>
-    </tr>
-  {% endfor %}
-
-  </tbody>
-</table>
+<div id="leaflet" style="height: 400px"></div>
 {% endblock content %}
 
 {% block js %}
+<script>
+  data = {{ data|safe }};
+</script>
 <script src="{% static 'leaflet/dist/leaflet.js' %}"></script>
+<script src="{% static 'leaflet-draw/dist/leaflet.draw.js' %}"></script>
 <script src="{% static 'georeference.js' %}"></script>
 {% endblock js %}
