--- a/templates/website/_base.html
+++ b/templates/website/_base.html
@@ -38,26 +38,20 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Georeference <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Database</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <li{% if request.resolver_match.url_name == 'index' %} class="active"{% endif %}><a href="{% url 'index' %}">Outstanding <span class="sr-only">(current)</span></a></li>
+            <li{% if request.resolver_match.url_name == 'completed' %} class="active"{% endif %}><a href="{% url 'completed' %}">Completed</a></li>
+            <li class="dropdown{% if request.resolver_match.url_name == 'add_georeferences_bulk' %} active{% endif %}">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Add georeferencing tasks <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
+                <li><a href="#">Add single</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><a href="{% url 'add_bulk' %}">Add bulk</a></li>
               </ul>
             </li>
           </ul>
-          <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Welcome, {{ user }} <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Your profile</a></li>
                 <li role="separator" class="divider"></li>
@@ -71,6 +65,8 @@
 
     <!-- Main content -->
     <div class="container">
+        <h1>{% block heading %}{% endblock %}</h1>
+        <hr>
         {% block content %}{% endblock %}
         <footer>
         </footer>
