--- a/templates/website/completed.html
+++ b/templates/website/completed.html
@@ -5,13 +5,13 @@
 <link rel="stylesheet" media="screen" href="{% static 'datatables.net-bs/css/dataTables.bootstrap.css' %}">
 {% endblock css %}
 
-{% block heading %}Outstanding georeferencing tasks{% endblock %}
+{% block heading %}Completed georeferencing tasks{% endblock %}
 
 {% block content %}
-<table class="table table-striped" id="dataTable">
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Added on</th>
+      <th>Completed on</th>
       <th>ID</th>
       <th>Group</th>
       <th class="col-md-6">Locality</th>
@@ -33,7 +33,7 @@
       </td>
     </tr>
     {% empty %}
-    <tr><td colspan="5">No outstanding tasks.</td></tr>
+    <tr><td colspan="5">No completed tasks.</td></tr>
     {% endfor %}
   </tbody>
 </table>
