--- a/templates/website/completed.html
+++ b/templates/website/completed.html
@@ -8,7 +8,7 @@
 {% block heading %}Completed georeferencing tasks{% endblock %}
 
 {% block content %}
-<table class="table table-striped">
+<table class="table table-striped" id="dataTable">
   <thead>
     <tr>
       <th>Completed on</th>
@@ -21,12 +21,12 @@
   <tbody>
     {% for georeference in georeferences %}
     <tr>
-      <td>{{ georeference.created_on }}</td>
+      <td class="col-md-2">{{ georeference.created_on }}</td>
       <td>{{ georeference.unique_id }}</td>
       <td>{{ georeference.group_id }}</td>
-      <td class="col-md-6">{{ georeference.locality_name }}</td>
-      <td>
-          <a class="btn btn-primary" href="{{ georeference.id }}" role="button">Georeference
+      <td>{{ georeference.locality_name }}</td>
+      <td class="col-md-3">
+          <a class="btn btn-info" href="{{ georeference.id }}" role="button">Edit georeference
             <span class="glyphicon glyphicon-globe" aria-hidden="true"></span></a>
           <a class="btn btn-danger" href="{{ georeference.id }}" role="button">Delete
             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
