--- a/templates/website/_base.html
+++ b/templates/website/_base.html
@@ -40,6 +40,7 @@
           <ul class="nav navbar-nav">
             <li{% if request.resolver_match.url_name == 'index' %} class="active"{% endif %}><a href="{% url 'index' %}">Outstanding <span class="sr-only">(current)</span></a></li>
             <li{% if request.resolver_match.url_name == 'completed' %} class="active"{% endif %}><a href="{% url 'completed' %}">Completed</a></li>
+            <li{% if request.resolver_match.url_name == 'qc' %} class="active"{% endif %}><a href="{% url 'qc' %}">QC</a></li>
             <li class="dropdown{% if request.resolver_match.url_name == 'add_georeferences_bulk' %} active{% endif %}">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Add georeferencing tasks <span class="caret"></span></a>
               <ul class="dropdown-menu">
