--- a/templates/website/_base.html
+++ b/templates/website/_base.html
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Georeferencing @ SANBI</a>
+          <a class="navbar-brand" href="/">Georeferencing @ SANBI</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
