--- a/templates/website/_base.html
+++ b/templates/website/_base.html
@@ -41,10 +41,10 @@
             <li{% if request.resolver_match.url_name == 'index' %} class="active"{% endif %}><a href="{% url 'index' %}">Outstanding <span class="sr-only">(current)</span></a></li>
             <li{% if request.resolver_match.url_name == 'completed' %} class="active"{% endif %}><a href="{% url 'completed' %}">Completed</a></li>
             <li{% if request.resolver_match.url_name == 'qc' %} class="active"{% endif %}><a href="{% url 'qc' %}">QC</a></li>
-            <li class="dropdown{% if request.resolver_match.url_name == 'add_georeferences_bulk' %} active{% endif %}">
+            <li class="dropdown{% if request.resolver_match.url_name == 'add_bulk' or request.resolver_match.url_name == 'add_single'  %} active{% endif %}">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Add georeferencing tasks <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Add single</a></li>
+                <li><a href="{% url 'add_single' %}">Add single</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="{% url 'add_bulk' %}">Add bulk</a></li>
               </ul>
